--- a/ver2/style.css
+++ b/ver2/style.css
@@ -16,7 +16,7 @@ body{width:100%;max-width:100vw;height:auto;font-size:1.6rem}
 .robot_step .small{font-size:1.6rem;}
 .evi_text2{font-size:1.8rem}
 .banner_text_in,.btn_banner>a,.pz_sub,.robot_step{font-size:2rem;}
-.sub_title,.pz_main,.evi_text1,.btn_banner,.event_text{font-size:3rem;}
+.sub_title,.pz_main,.evi_text1,.btn_banner,.event_text,.es_title{font-size:3rem;}
 .mt_text,.program_title{font-size:5rem;}
 
 /* button */
@@ -73,17 +73,17 @@ table tr td{vertical-align:middle;border:1px solid #e5e7eb}
 table tr td.border_none{border:none}
 .bg{background-color:#D0F2E2}
 table tr.bg_none{background-color:transparent;}
-table tr.title:nth-child(even){background-color:#91F2C5;}
+table tr.title:nth-child(even){background-color:#91F9D2;}
 
 /* event */
 .event{width:100%;height:100%;background:url('./images/eventoverlay.png') no-repeat center center / cover, rgba(0,0,0,0.5)}
 .event_box{text-align:center;}
-.event_title{display:inline-block;background:#91F2C5;width:auto;min-width:20%;padding:20px;box-sizing:border-box;border-radius:50px;text-align:center;font-weight:bold;margin:0 auto}
+.event_title{display:inline-block;background:#91F9D2;width:auto;min-width:20%;padding:20px;box-sizing:border-box;border-radius:50px;text-align:center;font-weight:bold;margin:0 auto}
 .event_text{margin:30px 0;color:#fff}
 .robot{width:100%;margin:0 0 50px 0}
 .robot_step{text-align:left;color:#fff}
 .robot_step_in{display:flex;justify-content:left;height:auto;line-height:30px;;;}
-.robot_step_in .step{color:#91F2C5;font-weight:bold;margin:0 10px 0 0}
+.robot_step_in .step{color:#91F9D2;font-weight:bold;margin:0 10px 0 0}`
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 
 a{text-decoration:none;}
@@ -138,7 +138,7 @@ nav>a{color:#fff;margin:0 0 0 20px}
 .evi_img>img{display:inline-block;width:100%;height:100%;}
 .evi_text{width:50%;color:#fff;text-align:center;padding:20px 0;box-sizing:border-box;height:auto;line-height:30px;}
 .evi_text1{display:inline-block;margin:0 0 20px 0;}
-.evi_point{color:#91FAD2;font-weight:bold;}
+.evi_point{color:#91F9D2;font-weight:bold;}
 
 /* between_img */
 .between_img{width:100%;height:150px;overflow:hidden;}
@@ -155,19 +155,100 @@ nav>a{color:#fff;margin:0 0 0 20px}
 table{width:100%;text-align:center}
 table tr{height:50px}
 table tr:nth-child(even){background-color:#D0F2E2}
-table tr td{vertical-align:middle;border:1px solid #e5e7eb}
+table tr td{vertical-align:middle;border:1px solid #e5e7eb;padding:5px;;}
 table tr td.border_none{border:none}
 .bg{background-color:#D0F2E2}
 table tr.bg_none{background-color:transparent;}
-table tr.title:nth-child(even){background-color:#91F2C5;}
+table tr.title:nth-child(even){background-color:#91F9D2;}
+
+.table{width:100%;overflow:auto;}
+.table table{white-space:nowrap;border-collapse:collapse;}
 
 /* event */
 .event{width:100%;height:100%;background:url('./images/eventoverlay.png') no-repeat center center / cover, rgba(0,0,0,0.5)}
 .event_box{text-align:center;}
-.event_title{display:inline-block;background:#91F2C5;width:auto;min-width:20%;padding:20px;box-sizing:border-box;border-radius:50px;text-align:center;font-weight:bold;margin:0 auto}
+.event_title{display:inline-block;background:#91F9D2;width:auto;min-width:20%;padding:20px;box-sizing:border-box;border-radius:50px;text-align:center;font-weight:bold;margin:0 auto}
 .event_text{margin:30px 0;color:#fff}
 .robot{width:100%;margin:0 0 50px 0}
 .robot_step{text-align:left;color:#fff}
-.robot_step_box{width:100%;}
+.robot_step_box{width:100%;max-width:700px;margin:0 auto 20px auto;}
 .robot_step_in{display:flex;justify-content:left;height:auto;line-height:30px;;;}
-.robot_step_in .step{color:#91F2C5;font-weight:bold;margin:0 10px 0 0}
+.robot_step_in .step{color:#91F9D2;font-weight:bold;margin:0 10px 0 0}
+.event_ic{width:20%;}
+.event_step{width:80%;height:auto;display:flex;justify-content:space-between;margin:20px auto;align-items:center;}
+.es_step{width:45%;height:auto;background-color:#fff;border:1px solid #91F9D2;padding:10px; box-sizing:border-box;border-radius:10px;}
+.es_step_img{width:200px;height:200px;margin:0 auto 20px;display:inline-block;}
+.es_step_img.step2{background-color:#91F9D2;border-radius:50%;}
+.es_step_img.step2 img{display:inline-block;width:auto;height:200px;}
+.es_icon{width:10%;color:#91F9D2;display:inline-block;}
+.es_step2{width:45%}
+.es_title{color:#91F9D2;font-weight:bold;margin:0 0 20px 0;}
+.es_text{line-height:30px;}
+
+/* program - sub */
+.all_program{width:100%}
+
+
+@media (max-width:1024px){
+    .wrap{max-width:900px}
+    .event_overlay{max-height:fit-content;}
+    .event_overlay_in{flex-direction:column;height:auto;}
+    .evi_img{width:50%;margin:0 auto 20px;border-radius:20px;}
+    .evi_text{width:100%;}
+    .btn_banner{width:80%;}
+    .btn_banner>a{width:90%}
+}
+
+@media (max-width:768px){
+    .wrap{max-width:calc(100% - 50px)}
+    .banner_content{max-width:none;}
+    .banner_img{opacity:70%;}
+    .btn_banner{width:100%;}
+}
+
+@media (max-width:425px){
+    .robot_step .small{font-size:1.4rem;}
+    .evi_text2{font-size:1.6rem}
+    .btn_banner>a,.pz_sub,.robot_step{font-size:1.8rem;}
+    .banner_text_in,.sub_title,.pz_main,.evi_text1,.btn_banner,.event_text{font-size:2rem;}
+    .mt_text,.program_title{font-size:3rem;}
+
+    header,.banner_text_in,.program_zone,.event_step,.robot_step_in{flex-direction: column}
+
+    .wrap{padding:20px 0 0 0;}
+    header{height:auto;line-height:50px}
+
+    .banner_content>img{width:100%}
+    .between_img{height:50px;}
+
+    .ic_banner{display:none;}
+    .banner_text_in{text-align:center;}
+    .bti_title{width:100%;margin:10px auto;}
+    
+    .btn_banner>a{height:50px;line-height:50px}
+    
+    .evi_img{width:100%;}
+
+    .program_zone{margin:20px auto}
+    .program_zone>img{width:30%;}
+
+    .pz_main{text-align:center;margin:20px auto;}
+    .pz_sub{height:auto;text-align:center;}
+
+    .btn_program_more{width:100%}
+
+    .event_title{min-width:80%;}
+
+    .es_step{width:100%;margin:0 0 20px 0}
+    
+    .es_icon{display:none;}
+
+    .event_step{margin:0 auto}
+
+    .robot_step_in{margin: 10px 0 0 0}
+
+    .robot{margin:0 0 20px 0}
+
+    br{display:none;}
+
+}
