--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body{width:100%;max-width:100vw;height:auto;font-size:1.6rem}
 /* main */
 .main{width:100%;height:100%;max-height:797px;background:url('./images/banner_main.png') no-repeat center center / cover;overflow:hidden;}
 header{width:100%;height:80px;line-height:80px;display:flex;justify-content:space-between;align-items:center}
-.logo{display:inline-block;width:auto;height:50px;line-height:50px;}
-.logo>img{width:100%;height:100%;}
+.logo{display:inline-block;width:100%;height:50px;line-height:50px;}
+.logo>img{width:100%;height:auto;object-fit:contain;}
 nav>a{color:#fff;margin:0 0 0 20px}
 .sub_title{width:100%;height:50px;line-height:50px;text-align:center;font-weight:bold;border-top:1px solid #fff;border-bottom:1px solid #fff;padding:10px 0;margin:0 0 20px 0}
 .banner{width:100%;height:600px;display:flex;justify-content:space-between;position:relative}
@@ -251,7 +251,7 @@ table tr.title:nth-child(even){background-color:#91F9D2;}
 
     .robot{margin:0 0 20px 0}
 
-    .evi_text2 br {display:none;}
+    .evi_text2 br,.pz_sub br{display:none;}
 
 
 }
