--- a/ver2/style.css
+++ b/ver2/style.css
@@ -193,7 +193,7 @@ table tr.title:nth-child(even){background-color:#91F9D2;}
 .event_title{display:inline-block;background:#91F9D2;width:auto;min-width:20%;height:50px;line-height:50px;padding:0 20px;box-sizing:border-box;border-radius:50px;text-align:center;font-weight:bold;margin:0 auto}
 .event_text{height:50px;line-height:50px;margin:30px 0;color:#fff}
 .robot{width:100%;margin:0 0 50px 0}
-.robot_step{text-align:left;color:#fff}
+.event_robot .robot_step{height:auto;line-height:30px;text-align:left;color:#fff;margin:0}
 .robot_step_box{width:100%;max-width:700px;margin:0 auto 20px auto;}
 .robot_step_in{display:flex;justify-content:left;height:auto;line-height:30px;;;}
 .robot_step_in .step{color:#91F9D2;font-weight:bold;margin:0 10px 0 0}
@@ -241,17 +241,113 @@ table tr.title:nth-child(even){background-color:#91F9D2;}
 .experience_robot>.arrow{margin:0 50px}
 
 /* 노트북 & 태블릿 가로 (해상도 1024px ~ 1279px)*/ 
-@media all and (min-width:1024px) and (max-width:1279px) { 
+@media all and (min-width:1024px) and (max-width:1279px) {
+  header.wrap{padding:0 20px;}
+  .wrap{padding:50px 20px;}
+  .banner{padding:50px 20px}
+  .event_overlay{max-height:fit-content}
+  .event_box{padding:0 0 50px 0;}
+  .evi_img{width:300px;height:auto}
+  .evi_img img{object-fit:contain;}
+  .evi_text{width:calc(100% - 500px)}
 } 
 
 /* 태블릿 가로 (해상도 768px ~ 1023px)*/ 
 @media all and (min-width:768px) and (max-width:1023px) { 
+    header.wrap{padding:0 20px;}
+  .wrap{padding:50px 20px;}
+  .banner{padding:50px 20px}
+  .event_overlay{max-height:fit-content}
+  .event_box{padding:0 0 50px 0;}
+  .evi_img{width:300px;height:auto}
+  .evi_img img{object-fit:contain;}
+  .evi_text{width:calc(100% - 500px)}
+  .banner_content{left: 50%;transform: translate(-50%);}
+  .banner_img{right:0;bottom:20px;opacity:50%;;}
+  .event_overlay_in{flex-direction: column}
+  .evi_text{width:100%;}
+  .event_step{width:100%;}
+  .robot_img{bottom:10%}
+  
 } 
 
 /* 모바일 가로 & 태블릿 세로 (해상도 480px ~ 767px)*/ 
 @media all and (min-width:480px) and (max-width:767px) {
+
 } 
 
 /* 모바일 세로 (해상도 ~ 479px)*/ 
 @media all and (max-width:479px) {
 }
+
+/* 모바일 가로 & 태블릿 세로 (해상도 480px ~ 767px)*/ 
+@media all and (min-width:320px) and (max-width:767px) {
+
+  .experience_title2{font-size:1.5rem;}
+  .robot_step .small{font-size:1.6rem;}
+  .evi_text2{font-size:1.7rem}
+  .banner_text_in,.btn_banner>a,.pz_sub,.robot_step,.es_title,.my_robot_name .name{font-size:1.8rem;}
+  .sub_title,.pz_main,.evi_text1,.btn_banner,.event_text,.robot_title{font-size:1.9rem;}
+  .mt_text,.program_title{font-size:3rem;}
+
+  .wrap{padding:20px}
+  header.wrap{height:auto;flex-direction: column;padding:20px 0;}
+  nav{height:50px;line-height:50px;;}
+  .banner{height:auto}
+  .banner_content{max-width:none;position:static;}
+  .banner_content img{width:100%;}
+  .banner_img{right:0}
+
+  .event_step{margin:0;flex-direction: column;width:100%}
+  .es_step{width:100%;}
+  .ic_banner{display:none;}
+  .banner_text_in{flex-direction:column;text-align:center;margin: 20px 0 0 0}
+  .bti_title{font-weight:bold;width:100%}
+
+  .btn_banner{;height:50px;line-height:50px;;}
+  .btn_banner>a{width:100%;height:50px;line-height:50px;;}
+
+  .banner_img{width:100%;opacity:30%;}
+
+  .event_overlay{max-height:none;}
+  .event_overlay_in{flex-direction:column;}
+
+  .evi_img{width:100%;}
+  .evi_text{width:100%;letter-spacing:-1px;}
+
+
+  .between_img {height:50px}
+  .banner.wrap{padding:0 20px;;}
+  .program_zone{flex-direction:column;}
+  
+  .program_zone>img{width:30%;margin:0 0 20px 0;}
+  
+  .pz_main{height:auto;text-align:center;}
+  .pz_sub{height:auto;text-align:center;}
+  .program_title{padding:0 0 30px 0;}
+  
+  .program_zone{margin:20px 0 }
+  
+  .btn_program_more{width:100%;}
+  
+  .event_title{width:100%;margin:0 0 20px 0}
+  .robot_step_in{flex-direction:column;margin:0 0 20px 0}
+
+  .es_icon{display:none;}
+
+  .es_step{margin:20px 0 0 0 }
+
+  .event_text{margin:0}
+
+  .robot_bg{width:100%;height:auto;;}
+  .robot_preview{width:100%}
+
+  .robot_step{margin:20px 0 0 0}
+
+  .robot_name_input>input{width:260px}
+  .robot_name_input>a{width:85px}
+
+  .code_input{width:45px;height:45px;}
+
+  .experience_robot{height:auto;}
+} 
